<resources>
    <string name="app_name">Cauldron</string>
    <string name="title">Cauldron Boi</string>
    <string name="usernameInput">Username</string>
    <string name="passwordInput">Password</string>
    <string name="signUpBtn">Sign Up</string>
    <string name="logInBtn">Log In</string>
    <string name="signUpTitle">Create an Account</string>
    <string name="signUsername">Username</string>
    <string name="confirmPassInput">Confirm Password</string>
    <string name="btnRegister">Register</string>

</resources>
